fix(account): align page content to top for consistent layout with/without sidebar

--- a/packages/account/src/App.module.scss
+++ b/packages/account/src/App.module.scss
@@ -19,6 +19,7 @@
   flex: 1;
   display: flex;
   justify-content: center;
+  align-items: flex-start;
 }
 
 .withSidebar {
